fixed size and spacing on portfolio items

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ h4 {
 }
 
 .card-img-wrap:hover img {
-    transform: scale(1.2);
+    transform: scale(1.15);
 }
 
 .card-img-wrap:hover:after {
